--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -1,6 +1,23 @@
-/* screen sizes */
+/* Screen sizes */
 $tablet: 768px;
 $phone: 375px;
+/* End screen sizes */
 
-$contentMaxWidth: 978px;
-$innerContentMaxWidth: 733px;
+/* element dimensions */
+	/* Root */
+	$contentMaxWidth: 978px;
+	$innerContentMaxWidth: 733px;
+	/* End root */
+/* End element dimensions */
+
+/* Colours */
+	/* Anchor */
+	$anchorLogoColour: #1e1;
+	/* End Anchor */
+
+	/* Slogan */
+	$sloganBackgroundColour: #e4d8cc;
+	$sloganTextColor: #fff;
+	$sloganTextBackgroundColour: #ffb183;
+	/* End Slogan */
+/* End colours */
