--- a/app/js/components/Jobs/Jobs.scss
+++ b/app/js/components/Jobs/Jobs.scss
@@ -1,7 +1,7 @@
 @import '../../../css/variables.scss';
 @import '../../../css/mixins.scss';
 
-#app div.jobs {
+#app div.component.jobs {
 	color: white;
 	display: inline-block;
 	margin-top: 50px;
