--- a/app/js/components/Menu/Menu.scss
+++ b/app/js/components/Menu/Menu.scss
@@ -1,7 +1,7 @@
 @import '../../../css/variables.scss';
 @import '../../../css/mixins.scss';
 
-#app div.menu {
+#app div.component.menu {
 	margin-top: 70px;
 	
 	.background {
