--- a/app/js/components/Wallpaper/Wallpaper.scss
+++ b/app/js/components/Wallpaper/Wallpaper.scss
@@ -1,6 +1,6 @@
 @import '../../../css/variables.scss';
 
-.wallpaper {
+#app div.component.wallpaper {
 	max-width: initial !important;
 	height: 170px;
 	background: url(../../../assets/images/Wallpaper.jpg);
