--- a/app/css/fonts.scss
+++ b/app/css/fonts.scss
@@ -1,5 +1,16 @@
 @font-face {
-  font-family: 'Rubik';
+  font-family: 'Rubik Bold';
+  src: url('../assets/fonts/Rubik-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/Rubik-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/Rubik-Bold.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/Rubik-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/Rubik-Bold.svg#9b3057b902e0e99767d503943b0ce25a') format('svg'); /* Legacy iOS */
+  font-style:   normal;
+  font-weight:  700;
+}
+
+@font-face {
+  font-family: 'Rubik Medium';
   src: url('../assets/fonts/Rubik-Medium.eot'); /* IE9 Compat Modes */
   src: url('../assets/fonts/Rubik-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('../assets/fonts/Rubik-Medium.woff') format('woff'), /* Modern Browsers */
@@ -10,12 +21,12 @@
 }
 
 @font-face {
-  font-family: 'Rubik Bold';
-  src: url('../assets/fonts/Rubik-Bold.eot'); /* IE9 Compat Modes */
-  src: url('../assets/fonts/Rubik-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/Rubik-Bold.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/Rubik-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/Rubik-Bold.svg#b069281d3dabdfe37595b29ccf3d02db') format('svg'); /* Legacy iOS */
+  font-family: 'Rubik Light';
+  src: url('../assets/fonts/Rubik-Light.eot'); /* IE9 Compat Modes */
+  src: url('../assets/fonts/Rubik-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/Rubik-Light.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/Rubik-Light.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/Rubik-Light.svg#b069281d3dabdfe37595b29ccf3d02db') format('svg'); /* Legacy iOS */
   font-style:   normal;
-  font-weight:  700;
+  font-weight:  100;
 }
