--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -7,7 +7,15 @@ $phone: 375px;
 	/* Root */
 	$contentMaxWidth: 978px;
 	$innerContentMaxWidth: 586px;
+	$headerBoxSize: 188px;
 	/* End root */
+
+	/* Work */
+	$workBottomExtrusionSize: 25px;
+	$workTopExtrusionSize: 20px;
+	$workTablePadding: 15px;
+	$workCellPadding: 15px;
+	/* End Work */
 /* End element dimensions */
 
 /* Colours */
