--- a/app/js/components/Wallpaper/Wallpaper.scss
+++ b/app/js/components/Wallpaper/Wallpaper.scss
@@ -6,6 +6,7 @@
 	background: url(../../../assets/images/Wallpaper.jpg);
 	background-repeat: repeat-x;
 	background-size: 985px 170px;
+	background-position-x: -90px;
 
 	@media only screen and (max-device-width : $tablet) {
 		background: url(../../../assets/images/Wallpaper-Mobile.jpg);
