--- a/app/js/components/Jobs/Jobs.scss
+++ b/app/js/components/Jobs/Jobs.scss
@@ -7,14 +7,14 @@
 	margin-top: 50px;
 	width: $innerContentMaxWidth;
 	@include horizontal-center();
+	white-space: pre-line;
 
 	.header {
 		$headerPadding: 15px;
-		$headerSize: 170px;
 
 		position: relative;
-		width: $headerSize;
-		height: $headerSize;
+		width: $headerBoxSize;
+		height: $headerBoxSize;
 		background-color: black;
 		padding: $headerPadding;
 		float: left;
@@ -39,5 +39,5 @@
 #app div.positions {
 	float: left;
 	min-width: 200px;
-	margin-top: 100px;
+	margin-top: $headerBoxSize - 70;
 }
