--- a/app/js/components/Partners/Partners.scss
+++ b/app/js/components/Partners/Partners.scss
@@ -2,9 +2,42 @@
 @import '../../../css/mixins.scss';
 
 #app div.component.partners {
+	color: white;
 	width: $innerContentMaxWidth;
-	display: inline-block;
-	@include horizontal-center();
+	white-space: pre-line;
+	margin-top: 60px;
+	
+	.header-wrapper {
+		width: 100%;
+		display: inline-block;
+		margin-bottom: 25px;
+	}
+
+	.header {
+		$headerPadding: 15px;
+
+		position: relative;
+		width: $headerBoxSize;
+		height: $headerBoxSize;
+		background-color: black;
+		padding: $headerPadding;
+		float: right;
+		white-space: pre-wrap;
+
+		.divider {
+			width: 100%;
+			height: 2px;
+			margin-top: 6px;
+			background-color: white;
+		}
+
+		.arrow {
+			position: absolute;
+			bottom: $headerPadding;
+			left: $headerPadding;
+			width: 15px;
+		}
+	}
 
 	.partner {
 		width: 33.33333333333%;
