--- a/app/js/components/Anchor/Anchor.scss
+++ b/app/js/components/Anchor/Anchor.scss
@@ -28,7 +28,11 @@
 		}
 	}
 
-	@media(max-width: $innerContentMaxWidth) {
+	@media(max-width: $iphone6) {
+		.anchor-container {
+			width: 184px;
+		}
+
 		.anchor-container .logo {
 			margin: 0 25px;
 		}
