--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -1,6 +1,8 @@
 /* Screen sizes */
 $tablet: 768px;
 $phone: 375px;
+$iphone5: 320px;
+$iphone6: 414px;
 /* End screen sizes */
 
 /* element dimensions */
