--- a/app/js/components/Culture/Culture.scss
+++ b/app/js/components/Culture/Culture.scss
@@ -138,7 +138,9 @@
 		margin-top: 30px;
 	}
 
-	@media(max-width: $contentMaxWidth) {
+	@media(max-width: $iphone6) {
+		margin-top: 15px;
+
 		.column1, .column2 {
 			width: 100%;
 			float: initial;
@@ -164,6 +166,8 @@
 		}
 
 		.coin-icon-group {
+			margin-top: -10px;
+
 			.coin1 > div {
 				width: 45%;
 				margin-right: 25px;
@@ -198,7 +202,7 @@
 			margin-top: -20px;
 		}
 
-		.bird > div {
+		.bird {
 			width: 45%;
 			margin-right: 50px;
 			float: right;
