Finished preloader. Made map icon bounce only a few times.

--- a/app/css/index.scss
+++ b/app/css/index.scss
@@ -5,7 +5,7 @@
 @import './mixins.scss';
 
 html,body {
-	transform: translateZ(0); //activate 3d acceleration
+	// transform: translateZ(0); //activate 3d acceleration
 }
 
 html,body,.title {
