--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -8,7 +8,9 @@ $iphone6: 414px;
 /* element dimensions */
 	/* Root */
 	$contentMaxWidth: 978px;
+	// $contentMaxWidth: 1600px;
 	$innerContentMaxWidth: 586px;
+	// $innerContentMaxWidth: 940px;
 	$headerBoxSize: 188px;
 	/* End root */
 
