--- a/app/js/components/Culture/Culture.scss
+++ b/app/js/components/Culture/Culture.scss
@@ -3,7 +3,7 @@
 
 #app div.component.culture {
 	width: $innerContentMaxWidth;
-	margin-top: 40px;
+	margin-top: 30px;
 
 	.columns {
 		display: inline-block;
@@ -71,7 +71,6 @@
 		width: 100%;
 		position: relative;
 		display: inline-block;
-		padding-right: 30px;
 		margin-bottom: 28px;
 		> * {
 			width: 60%;
@@ -81,6 +80,7 @@
 
 	.art2 {
 		display: inline-block;
+		width: 100%;
 
 		> div {
 			float: right;
