--- a/app/js/components/Contact/Contact.scss
+++ b/app/js/components/Contact/Contact.scss
@@ -7,7 +7,7 @@
 	width: $innerContentMaxWidth;
 
 	.header {
-		$headerPadding: 15px;
+		$headerPadding: 25px;
 
 		position: relative;
 		width: 33.333333333%;
@@ -27,32 +27,32 @@
 			position: absolute;
 			bottom: $headerPadding;
 			right: $headerPadding;
-			width: 15px;
+			width: 25px;
 		}
 	}
 
 	.methods {
 		float: left;
 		min-width: 200px;
-		margin-top: $headerBoxSize - 68;
+		margin-top: 213px;
 		width: 66.66666666666%;
 		z-index: 2;
 		position: relative;
 
 		.method {
 			width: 50%;
-			padding: 0 5px 0 5px;
-			height: 70px;
+			padding: 0 7.5px 0 7.5px;
+			height: 100px;
 			cursor: pointer;
 			float: left;
 		}
 
 		.method:nth-child(2n-1) {
-			padding-left: 10px;
+			padding-left: 14px;
 		}
 
 		.method.address {
-			margin-top: 8px;
+			margin-top: 14px;
 			height: initial;
 
 			.edgy {
@@ -66,7 +66,8 @@
 
 		.method-wrapper {
 			width:100%;
-			padding: 14px;
+			height: 100%;
+			padding: 25px;
 		}
 
 		.method .title {
@@ -97,29 +98,44 @@
 	}
 
 	@media(max-width:$iphone6) {
-		padding: 0 40px;
+		padding: 0 14px;
 		font-size: 0.9em;
 
 		.header {
 			width: 50%;
 			height: 160px;
+			padding: 15px;
+
+			.arrow {
+				width: 15px;
+				bottom: 15px;
+				right: 15px;
+			}
 		}
 
 		.methods {
 			width: 50%;
 			min-width: initial;
-			margin-top: 27px;
+			margin-top: 44px;
 		}
 
 		.methods .method {
 			width: 100%;
-			padding-left: 10px;
+			padding-left: 14px;
 			padding-right: 0;
 			margin: 0 0 6px 0;
 			height: 60px;
 
 			.title {
 				margin-bottom: 4px;
+			}
+
+			.method-wrapper {
+				padding: 15px !important;
+			}
+
+			.method-wrapper p {
+				font-size: 0.5em;
 			}
 		}
 
@@ -135,25 +151,9 @@
 
 	@media(max-width: $iphone5) {
 		font-size: 0.8em;
-
-		.header {
-			height: 120px;
-		}
-
-		.method-wrapper {
-			padding: 10px;
-		}
-
+		
 		.methods {
-			margin-top: -15px;
-		}
-
-		.methods .method.phone {
-			margin-top: 1px;
-		}
-
-		.methods .method.address {
-			margin-top: 11px;
+			margin-top: 14px;
 		}
 	}
 }
