--- a/app/js/components/Work/WorkEntry.scss
+++ b/app/js/components/Work/WorkEntry.scss
@@ -45,7 +45,7 @@
 			position: absolute;
 			bottom: $workCellPadding;
 			right: $workCellPadding;
-			width: 15px;
+			width: 25px;
 		}
 	}
 
@@ -140,34 +140,49 @@
 	.workentry:nth-child(7) > div > div {overflow:hidden;}  //padding isn't inserted properly on this tile on mobile for some reason, "temp" workaround
 	//end remove outer table padding
 
-	@media(max-width: $iphone6) {
-		padding: 0 30px;
+	@media(max-width: ($innerContentMaxWidth + 14*2)) {
+		.workentry:nth-child(4n+1) {
+			> div {
+				padding-left: 14px;
+			}
+		}
+
+		.workentry:nth-child(4n+3) {
+			> div {
+				padding-right: 14px;
+			}
+		}
+	}
+
+	@media(max-width: 625px) {
+		padding: 0 7.5px;
 
 		.workentry {
 			width: 50%;
+			> div {padding: 7.5px !important;}
 		}
 
 		//remove outer table padding
-		.workentry:nth-child(4n+1) {
-			> div {
-				padding-left: $workTablePadding/2;
-			}
-		}
-		.workentry:nth-child(3n+1) {
-			> div {
-				padding-left: 0;
-			}
-		}
-		.workentry:nth-child(4n+3) {
-			> div {
-				padding-right: $workTablePadding/2;
-			}
-		}
-		.workentry:nth-child(3n+3) {
-			> div {
-				padding-right: 0;
-			}
-		}
+		// .workentry:nth-child(2n+1) {
+		// 	> div {
+		// 		padding-left: $workTablePadding/2 !important;
+		// 	}
+		// }
+		// .workentry:nth-child(2n+1) {
+		// 	> div {
+		// 		padding-left: 0;
+		// 	}
+		// }
+		// .workentry:nth-child(3n+1) {
+		// 	> div {
+		// 		padding-right: $workTablePadding/2;
+		// 	}
+		// }
+		// .workentry:nth-child(2n+1) {
+		// 	> div {
+		// 		padding-right: 0;
+		// 	}
+		// }
 		//end remove outer table padding
 
 		//add odd extrusions
@@ -183,11 +198,17 @@
 		//end add odd extrusions
 	}
 
-	@media(max-width: $iphone5) {
-		font-size: 0.8em;
-		
+	@media(max-width: $iphone6) {
 		.workentry {
 			height: 140px;
+
+			.content, .header {
+				padding: 15px;
+			}
+
+			.header .arrow {
+				width: 15px;
+			}
 		}
 	}
 }
