Reexported assets. Added some comments.

--- a/app/css/variables.scss
+++ b/app/css/variables.scss
@@ -16,7 +16,9 @@ $iphone6: 414px;
 
 	/* Work */
 	$workBottomExtrusionSize: 25px;
-	$workTopExtrusionSize: 20px;
+	$workTopExtrusionSize: 36px;
+	$workRightExtrusionSize: 5px;
+	$workLeftExtrusionSize: 10px;
 	$workTablePadding: 15px;
 	$workCellPadding: 15px;
 	/* End Work */
