--- a/app/css/mixins.scss
+++ b/app/css/mixins.scss
@@ -40,6 +40,7 @@
 }
 
 @mixin extrusion($position: 'top', $size: 10px) {
+  z-index: 1;
   @if $position == 'bottom' {
     bottom: -$size;
     height: $size;
