--- a/app/js/components/Contact/Contact.scss
+++ b/app/js/components/Contact/Contact.scss
@@ -97,6 +97,12 @@
 		animation: bounce 2s 3;
 	}
 
+	@media(max-width: $tablet) {
+		.methods {
+			margin-top: 156px;
+		}
+	}
+
 	@media(max-width:$iphone6) {
 		padding: 0 14px;
 		font-size: 0.9em;
@@ -113,7 +119,7 @@
 			}
 		}
 
-		.methods {
+		div.methods {
 			width: 50%;
 			min-width: initial;
 			margin-top: 44px;
@@ -152,7 +158,7 @@
 	@media(max-width: $iphone5) {
 		font-size: 0.8em;
 		
-		.methods {
+		div.methods {
 			margin-top: 14px;
 		}
 	}
