--- a/app/js/components/Work/WorkEntry.scss
+++ b/app/js/components/Work/WorkEntry.scss
@@ -51,7 +51,6 @@
 
 	.workentry .content {
 		position: relative;
-		overflow: hidden;
 		cursor: pointer;
 
 		.icon {
@@ -66,11 +65,13 @@
 			position: absolute;
 			left: 0;
 			top: 0;
+			overflow: hidden;
 			width: 100%;
 			height: 100%;
 			opacity: 0;
 			transition: opacity 0.4s;
 			backface-visibility: hidden;
+			z-index: 5;
 
 			img {
 				position: absolute;
@@ -94,28 +95,18 @@
 
 	//add odd extrusions
 	.workentry:nth-child(2) > div > div:after {@include extrusion('top', $workTopExtrusionSize);}
-	.workentry:nth-child(2) .hover-container {
-		top: -$workTopExtrusionSize;
-		
-		img {
-			width: 110%;
-		 }
-	}
+	.workentry:nth-child(2) .hover-container {top: -$workTopExtrusionSize; overflow: initial;}
 
-	.workentry:nth-child(7) > div > div:after {@include extrusion('right', 18px);}
-	.workentry:nth-child(7) .hover-container {width: 110%;}
+	.workentry:nth-child(7) > div > div:after {@include extrusion('right', $workRightExtrusionSize);}
+	.workentry:nth-child(7) .hover-container {overflow: initial;}
+	.workentry:nth-child(7) .hover-container .hover {width: initial; height: 100%;}
 
-	.workentry:nth-child(9) > div > div:after {
-		@include extrusion('left', 20px);
-	}
+	.workentry:nth-child(9) > div > div:after {@include extrusion('left', $workLeftExtrusionSize);}
+	.workentry:nth-child(9) .hover-container {overflow: initial;}
+	.workentry:nth-child(9) .hover-container .hover {width: initial; height: 100%; right: 0; left: initial;}
 
-	.workentry:last-child > div > div:after {
-		@include extrusion('bottom', $workBottomExtrusionSize);
-	}
-
-	.workentry:last-child {
-		margin-bottom: $workBottomExtrusionSize;
-	}
+	.workentry:last-child > div > div:after {@include extrusion('bottom', $workBottomExtrusionSize);}
+	.workentry:last-child .hover-container {margin-bottom: -$workBottomExtrusionSize; overflow: initial;}
 	//end add odd extrusions
 
 	//remove outer table padding
@@ -136,8 +127,6 @@
 			padding-top: 0;
 		}
 	}
-
-	.workentry:nth-child(7) > div > div {overflow:hidden;}  //padding isn't inserted properly on this tile on mobile for some reason, "temp" workaround
 	//end remove outer table padding
 
 	@media(max-width: ($innerContentMaxWidth + 14*2)) {
@@ -151,6 +140,10 @@
 			> div {
 				padding-right: 14px;
 			}
+		}
+
+		.hover-container {
+			display: none;
 		}
 	}
 
@@ -209,6 +202,12 @@
 			.header .arrow {
 				width: 15px;
 			}
+		}
+
+		.workentry:nth-child(7) > div > div:after {content: initial;}
+
+		.workexpanded {
+			padding: 0 10px;
 		}
 	}
 }
